Finish data API backends and shared bridges