@@ -1,10 +1,10 @@
 package sh.harold.creative.library.data;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 
 public final class DocumentPatch {
 
@@ -12,21 +12,23 @@ public final class DocumentPatch {
     private final List<String> removePaths = new ArrayList<>();
 
     public DocumentPatch set(String path, Object value) {
-        Objects.requireNonNull(path, "path");
-        setValues.put(path, value);
-        removePaths.remove(path);
+        String normalizedPath = DocumentValues.requirePath(path);
+        setValues.put(normalizedPath, DocumentValues.normalizeValue(value));
+        removePaths.remove(normalizedPath);
         return this;
     }
 
     public DocumentPatch remove(String path) {
-        Objects.requireNonNull(path, "path");
-        setValues.remove(path);
-        removePaths.add(path);
+        String normalizedPath = DocumentValues.requirePath(path);
+        setValues.remove(normalizedPath);
+        if (!removePaths.contains(normalizedPath)) {
+            removePaths.add(normalizedPath);
+        }
         return this;
     }
 
     public Map<String, Object> setValues() {
-        return Map.copyOf(setValues);
+        return Collections.unmodifiableMap(new LinkedHashMap<>(setValues));
     }
 
     public List<String> removePaths() {
